--- a/css/styles.css
+++ b/css/styles.css
@@ -95,6 +95,7 @@ img {
     outline: 2px dashed #2959ce;
     outline-offset: 3px;
 }
+
 /* CONTAINER */
 
 .container {
@@ -114,6 +115,7 @@ img {
 .site-header-top {
     background-color: #f6f6f6;
     padding: 30px 0;
+    margin-bottom: 10px;
 
 }
 
@@ -199,4 +201,48 @@ img {
 .lang-toggle-link-active {
     background-color: #fff;
     color: #000;
+}
+
+
+/* SITENAV */
+
+.sitenav {
+    border-bottom: 1px solid #d1d1d1;
+    padding: 16px 0;
+    font-size: 18px;
+    line-height: normal;
+    font-weight: 500;
+    margin-bottom: 40px;
+}
+
+.sitenav-list {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+}
+
+.sitenav-item {
+    margin-top: 4px;
+    margin-bottom: 4px;
+}
+
+.sitenav-item:not(:last-child) {
+    margin-right: 34px;
+}
+
+.sitenav-link {
+    text-decoration: none;
+    display: inline-block;
+    color: #7f7f7f;
+}
+
+.sitenav-link:hover {
+    opacity: 0.8;
+}
+
+.sitenav-link:active {
+    opacity: 0.6;
 }
