--- a/css/styles.css
+++ b/css/styles.css
@@ -107,9 +107,8 @@ img {
     margin-right: auto;
 }
 
+
 /* SITE-HEADER */
-
-
 
 /* site-header-top  */
 .site-header-top {
@@ -250,11 +249,104 @@ img {
 
 /* site-header-banner */
 
-.site-header-banner {
-}
+.site-header-banner {}
+
 .site-header-banner-link {
     display: flex;
 }
+
 .site-header-banner-img {
     border-radius: 8px;
 }
+
+
+/* MAIN CONTENT */
+
+.main-content {
+    flex-grow: 1;
+    padding-top: 50px;
+}
+
+
+/* NEWS GRID */
+
+
+.news-grid {
+    display: flex;
+    flex-wrap: wrap;
+    margin-left: -10px;
+}
+
+.news-grid-item {
+    width: 393px;
+    margin-left: 10px;
+    margin-bottom: 10px;
+}
+
+.article-card {
+    display: flex;
+    flex-direction: column;
+    background-color: #f6f6f6;
+    border-radius: 15px;
+    padding: 20px 17px 15px;
+}
+
+.article-card-title {
+    margin-top: 0;
+    margin-bottom: 10px;
+    font-size: 20px;
+    line-height: 26px;
+    font-weight: 500;
+}
+
+.article-card-link {
+    display: inline-block;
+    color: #000;
+    text-decoration: none;
+}
+
+.article-card-link:hover {
+    color: #7296ec;
+}
+
+
+.article-card-link:active {
+    opacity: 0.8;
+}
+
+.article-card-text {
+    margin-top: 0;
+    margin-bottom: 15px;
+}
+
+.article-card-img {
+    display: block;
+    width: 360px;
+    height: 165px;
+    object-fit: cover;
+    border-radius: 10px;
+    margin-top: auto;
+    margin-bottom: 15px;
+}
+
+.article-card-footer {
+    display: flex;
+    align-items: center;
+}
+
+.article-card-source-icon {
+    width: 20px;
+    height: 20px;
+    border-radius: 5px;
+    margin-right: 10px;
+}
+
+.article-card-source-time {
+    color: #5e5f61;
+    font-size: 12px;
+    line-height: normal;
+}
+
+.article-card-source {}
+
+.article-card-time {}
