--- a/css/styles.css
+++ b/css/styles.css
@@ -67,6 +67,7 @@ img {
     display: inline-block;
     padding: 13px 20px;
     border-radius: 10px;
+    border: none;
     font-size: 16px;
     font-weight: 500;
     text-decoration: none;
@@ -75,19 +76,23 @@ img {
     line-height: 18.96px;
 }
 
+.button:hover {
+    opacity: 0.8;
+}
+
+.button:active {
+    opacity: 0.6;
+}
+
 .button-primary {
     color: #fff;
     background-color: #7296ec;
 }
 
-.button-primary:hover {
-    opacity: 0.8;
+.button-orange {
+    background-color: #f78b3b;
+    color: #fff;
 }
-
-.button-primary:active {
-    opacity: 0.6;
-}
-
 
 /* OUTLINE */
 
@@ -275,6 +280,7 @@ img {
     display: flex;
     flex-wrap: wrap;
     margin-left: -10px;
+    margin-bottom: -10px;
 }
 
 .news-grid-item {
@@ -347,6 +353,26 @@ img {
     line-height: normal;
 }
 
-.article-card-source {}
 
-.article-card-time {}
+/* NOTIFICATION CTA */
+
+.notification-cta {
+    margin: 60px 75px;
+    padding: 25px 70px 25px 25px;
+    background-color: pink;
+    border-radius: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.notification-cta-text {
+    font-size: 20px;
+    line-height: 26px;
+    font-weight: 500;
+    color: #000;
+}
+
+.button {}
+
+.button-orange {}
