--- a/css/styles.css
+++ b/css/styles.css
@@ -94,6 +94,15 @@ img {
     color: #fff;
 }
 
+.button-block {
+    width: 100%;
+    display: block;
+}
+
+/* .favicon {
+    border-radius: 50%;
+} */
+
 /* OUTLINE */
 
 *:focus {
@@ -373,6 +382,105 @@ img {
     color: #000;
 }
 
-.button {}
+/* GLOBAL NEWS */
 
-.button-orange {}
+.global-news {
+    width: 797px;
+}
+
+.global-news-heading {
+    font-size: 24px;
+    line-height: normal;
+    color: #000;
+    font-weight: 500;
+    margin-top: 0;
+    margin-bottom: 20px;
+}
+
+.news-list {
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 17px;
+}
+
+.news-list-item:not(:last-child) {
+    margin-bottom: 10px;
+}
+
+/* Article Card Horizontal */
+
+.article-card-horizontal {
+    border-radius: 15px;
+    background-color: #f6f6f6;
+    display: flex;
+    align-items: flex-start;
+    padding: 20px;
+}
+
+.article-card-horizontal-img {
+    display: inline-block;
+    border-radius: 10px;
+    width: 210px;
+    height: 165px;
+    margin-right: 15px;
+    object-fit: cover;
+}
+
+.article-card-horizontal-content {
+    flex-grow: 1;
+}
+
+.article-card-horizontal-title {
+    margin-top: 0;
+    margin-bottom: 10px;
+    font-size: 20px;
+    line-height: 26px;
+    font-weight: 500;
+}
+
+.article-card-horizontal-link {
+    display: inline-block;
+    color: #000;
+    text-decoration: none;
+}
+
+.article-card-horizontal-link:hover {
+    color: #7296ec;
+}
+
+
+.article-card-horizontal-link:active {
+    opacity: 0.8;
+}
+
+.article-card-horizontal-text {
+    margin-top: 0;
+    font-size: 16px;
+    line-height: 22px;
+    margin-bottom: 17px;
+}
+
+.article-card-horizontal-footer {
+    display: flex;
+    align-items: center;
+}
+
+.article-card-horizontal-source-icon {
+    border-radius: 5px;
+    width: 20px;
+    height: 20px;
+    object-fit: cover;
+    margin-right: 10px;
+}
+
+.article-card-horizontal-source-time {
+    font-size: 12px;
+    line-height: normal;
+    color: #5e5f61;
+}
+
+
+.news-list-more-button  {
+    padding: 17px;
+    background-color: #eaeaea;
+}
