--- a/css/styles.css
+++ b/css/styles.css
@@ -382,11 +382,25 @@ img {
     color: #000;
 }
 
-/* GLOBAL NEWS */
 
-.global-news {
-    width: 797px;
+/* LAYOUT */
+
+.layout-2-1 {
+    display: flex;
+    align-items: flex-start;
 }
+
+.layout-2-1-main {
+    width: 797px;
+    margin-right: 10px;
+}
+
+.layout-2-1-sidebar {
+    width: 393px;
+    margin-top: 49px;
+}
+
+/* GLOBAL NEWS */
 
 .global-news-heading {
     font-size: 24px;
@@ -480,7 +494,77 @@ img {
 }
 
 
-.news-list-more-button  {
+.news-list-more-button {
     padding: 17px;
     background-color: #eaeaea;
 }
+
+
+/* Sidebar news Card */
+.sidebar-news-card {
+    background-color: #f6f6f6;
+    color: #000;
+    padding: 20px 17px 25px;
+    border-radius: 15px;
+}
+
+.sidebar-news-card-heading {
+    font-size: 24px;
+    line-height: normal;
+    font-weight: 500;
+    margin-top: 0;
+    margin-bottom: 25px;
+}
+
+.sidebar-news-card-list {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
+
+.sidebar-news-card-item {
+    padding: 20px 0;
+}
+
+.sidebar-news-card-item:first-child {
+    padding-top: 0;
+}
+
+.sidebar-news-card-item:last-child {
+    padding-bottom: 0;
+}
+
+.sidebar-news-card-item:not(:last-child) {
+    border-bottom: 1px solid #d2d2d2;
+}
+
+.sidebar-news-card-title {
+    font-size: 18px;
+    line-height: 24px;
+}
+
+.sidebar-news-card-link {
+    display: inline-block;
+    color: #000;
+    text-decoration: none;
+}
+
+
+.sidebar-news-card-link:hover {
+    color: #7296ec;
+}
+
+
+.sidebar-news-card-link:active {
+    opacity: 0.8;
+}
+
+.sidebar-news-card-source-time {
+    font-size: 13px;
+    line-height: normal;
+    color: #5e5f61;
+    margin-top: 0;
+    margin-bottom: 8px;
+}
+
+.sidebar-news-card-source {}
