--- a/css/styles.css
+++ b/css/styles.css
@@ -428,7 +428,7 @@ img {
     background-color: #f6f6f6;
     display: flex;
     align-items: flex-start;
-    padding: 20px;
+    padding: 20px 17px 20px;
 }
 
 .article-card-horizontal-img {
