--- a/css/styles.css
+++ b/css/styles.css
@@ -279,6 +279,7 @@ img {
 .main-content {
     flex-grow: 1;
     padding-top: 50px;
+    padding-bottom: 100px;
 }
 
 
@@ -400,6 +401,10 @@ img {
     margin-top: 49px;
 }
 
+.layout-2-1-sidebar-item {
+    margin-bottom: 10px;
+}
+
 /* GLOBAL NEWS */
 
 .global-news-heading {
@@ -428,7 +433,7 @@ img {
     background-color: #f6f6f6;
     display: flex;
     align-items: flex-start;
-    padding: 20px 17px 20px;
+    padding: 20px 17px;
 }
 
 .article-card-horizontal-img {
@@ -567,4 +572,13 @@ img {
     margin-bottom: 8px;
 }
 
-.sidebar-news-card-source {}
+/* SIDEBAR-ADD */
+.sidebar-add-link {
+    display: flex;
+}
+.sidebar-add-img {
+    width: 393px;
+    height: 338px;
+    object-fit: cover;
+    border-radius: 15px;
+}
