--- a/css/styles.css
+++ b/css/styles.css
@@ -546,6 +546,8 @@ img {
 .sidebar-news-card-title {
     font-size: 18px;
     line-height: 24px;
+    margin-top: 0;
+    margin-bottom: 8px;
 }
 
 .sidebar-news-card-link {
@@ -569,7 +571,7 @@ img {
     line-height: normal;
     color: #5e5f61;
     margin-top: 0;
-    margin-bottom: 8px;
+    /* margin-bottom: 8px; */
 }
 
 /* SIDEBAR-ADD */
