--- a/css/styles.css
+++ b/css/styles.css
@@ -578,9 +578,142 @@ img {
 .sidebar-add-link {
     display: flex;
 }
+
 .sidebar-add-img {
     width: 393px;
     height: 338px;
     object-fit: cover;
     border-radius: 15px;
+}
+
+
+
+/* SITE FOOTER */
+
+.site-footer {
+    padding: 40px 0;
+    background-color: #7297EF;
+    color: white;
+
+}
+
+.container {}
+
+.site-footer-logo-wrapper {
+    display: flex;
+    margin-bottom: 15px;
+}
+
+.site-footer-logo {
+    display: flex;
+}
+
+.site-footer-logo:hover {
+    opacity: 0.8;
+}
+
+.site-footer-logo:active {
+    opacity: 0.6;
+}
+
+.site-footer-logo-img {
+    width: 264px;
+    height: 28px;
+    object-fit: contain;
+}
+
+.site-footer *:focus {
+    outline: 2px dashed #fff;
+
+}
+
+.site-footer-about-links {
+    display: flex;
+}
+
+.site-footer-about {
+    width: 230px;
+    margin-right: 200px;
+    font-size: 12px;
+    line-height: 19px;
+}
+
+.site-footer-links-wrapper {
+    display: flex;
+    flex-grow: 1;
+}
+
+.site-footer-links {
+    width: 50%;
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    padding-right: 24px;
+    font-weight: 500;
+}
+
+.site-footer-links-item:not(:last-child) {
+    margin-bottom: 20px;
+}
+
+.site-footer-link {
+    display: inline-block;
+    color: #fff;
+    text-decoration: none;
+}
+
+.site-footer-link:hover {
+    text-decoration: underline;
+}
+
+.site-footer-divider {
+    border: 0;
+    height: 1px;
+    background-color: #cecece;
+    margin-top: 30px;
+    margin-bottom: 20px;
+}
+
+.site-footer-socials {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.site-footer-heading {
+    width: 160px;
+    margin: 0;
+    font-size: 18px;
+    line-height: 23px;
+    font-weight: 500;
+}
+
+.site-footer-socials-list {
+    display: flex;
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
+
+.site-footer-socials-list-item:not(:last-child) {
+    margin-right: 25px;
+}
+
+.site-footer-socials-link {
+    display: flex;
+}
+
+.site-footer-socials-link:hover {
+    opacity: 0.8;
+}
+
+.site-footer-socials-link:active {
+    opacity: 0.6;
+}
+
+.site-footer-socials-img {
+    flex-shrink: 0;
+    object-fit: contain;
+    width: 25px;
+    height: 25px;
 }
