News-list.html files added

--- a/css/styles.css
+++ b/css/styles.css
@@ -717,3 +717,12 @@ img {
     width: 25px;
     height: 25px;
 }
+
+
+
+/* NEWS LIST STYLES */
+
+.sidebar-add-img-big {
+    width: 393px;
+    height: 553px;
+}
